add user and company management

--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,5 @@ media/
 # Optional: pipenv / poetry environments
 Pipfile.lock
 poetry.lock
+internship_system/internship_system/__pycache__/settings.cpython-314.pyc
+internship_system/internship_system/__pycache__/urls.cpython-314.pyc
